[package]

name = "rtsparse"
version = "1.0.0"
authors = ["Nikita Pylev <pl0q1n@gmail.com>"]
license = "MIT/Apache-2.0"
description = "A tiny, safe, speedy, zero-copy RSTP/1.0 parser. Forked from https://github.com/seanmonstar/httparse"
repository = "https://github.com/pl0q1n/httparse"
readme = "README.md"
keywords = ["http", "parser", "no_std"]
categories = ["network-programming", "no-std", "parser-implementations", "web-programming"]
build = "build.rs"

[features]
default = ["std"]
std = []

[dev-dependencies]
pico-sys = "0.0"

[profile.bench]
lto = true
codegen-units = 1
opt-level = 3
